--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="./index.js"></script>
+  <link rel="stylesheet" href="./styles.css">
+  <script src="./index.js" defer></script>
 </head>
 
 <body>
-
+  <header>
+    <ul id="roster"></ul>
+  </header>
+  <main>
+    <img src="" alt="">
+  </main>
 </body>
 
 </html>
